--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header>
         <img src="/img/logo.svg" alt="logotype" id="logo_img">
         <div class="header_urls">
-            <p class="header_info">Масло</p>
-            <!-- aaaaaaaaa ssylka -->
-            <p class="header_info">О нас</p>
-            <p class="header_info">Оплата и доставка</p>
-            <p>Контакты</p>
+            <!-- <button><img src="/img/menu_button.svg" alt="menu_button" id="menu_button"></button> -->
+            <a href="#" class="header_info">Масло</a>
+            <a href="#" class="header_info">О нас</a>
+            <a href="#" class="header_info">Оплата и доставка</a>
+            <a href="#" class="header_info">Контакты</a>
         </div>
         <img src="/img/korzina.svg" alt="korzina">
     </header>
@@ -41,8 +41,10 @@
             <p class="product_count">2</p>
             <button class="plusminus_count" id="plus_button">+</button>
         </div>
-        <p class="buttons_buying">ПОДРОБНЕЕ</p>
-        <p class="buttons_buying">В КОРЗИНУ</p>
+        <div class="div_butt_buy">
+            <p class="buttons_buying">ПОДРОБНЕЕ</p>
+            <p class="buttons_buying" id="second_button_buy">В КОРЗИНУ</p>
+        </div>
     </main>
 
     <!-- <section>
