--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
             <button class="plusminus_count" id="plus_button">+</button>
         </div>
         <div class="div_butt_buy">
-            <p class="buttons_buying">ПОДРОБНЕЕ</p>
+            <p class="buttons_buying" id="first_button_buy">ПОДРОБНЕЕ</p>
             <p class="buttons_buying" id="second_button_buy">В КОРЗИНУ</p>
         </div>
     </main>
 
+    <section>
+        <h2>Задание 2</h2>
+    </section>
     <!-- <section>
         <h1>Задание 2</h1>
         <label for="first">Name</label><br>
