--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="header_info">Оплата и доставка</a>
             <a href="#" class="header_info">Контакты</a>
         </div>
-        <img src="/img/korzina.svg" alt="korzina">
+        <a href="#"><img src="/img/korzina.svg" alt="korzina"></a>
     </header>
 
     <main>
